fixed bug #45735 The components in ASM Widget should be aligning/centered and responsive handle better

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CiscoWidget.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/CiscoWidget.css
@@ -1,60 +1,63 @@
 ﻿
-.cisco-widget .relative {
-	position: relative;
+
+
+.cisco-widget > .row > div {
+	margin: 10px 0;
 }
+
+	.cisco-widget > .row > div > div {
+		height: 68px;
+	}
 
 .cisco-widget .inline-block {
 	display: inline-block;
 }
+
 .cisco-widget .teleopti-container {
 	height: 70px;
 	white-space: nowrap;
 }
+
 .cisco-widget .logo-container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-left: -74px;
-	margin-top: -30px;
+	width: 148px;
 }
 
 .cisco-widget .img-container {
 	height: 60px;
-	width: 148px;
 }
 
-.cisco-widget .img-container img {
-	height: 100%;
-	width: auto;
-}
+	.cisco-widget .img-container img {
+		height: 100%;
+		width: auto;
+	}
 
-.cisco-widget .mytime-chart-container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: -34px;
-	margin-left: -192px;
-}
 .cisco-widget .report-ciscofix .navbar-teleopti {
 	display: none;
 }
+
 .cisco-widget .report-ciscofix p {
 	margin-bottom: 0;
 	font-size: 10px;
 }
+
 .cisco-widget .report-ciscofix .dashboard {
 	min-height: 40px;
 	margin-bottom: 5px;
 	white-space: nowrap;
 }
+
 .cisco-widget .report-ciscofix h1 {
 	font-size: 14px;
 	margin-top: 5px;
 	margin-bottom: 0;
 }
+
 .cisco-widget .report-ciscofix .container {
 	margin-top: 0;
+	padding: 0 10px;
+	max-width: 100%;
 }
+
 .cisco-widget .col-md-4, .cisco-widget .col-sm-6, .cisco-widget .col-xs-12 {
 	padding-left: 5px;
 	padding-right: 5px;
